--- a/assets/sass/components/_form.scss
+++ b/assets/sass/components/_form.scss
@@ -1,119 +1,81 @@
 ///
-/// Massively by HTML5 UP
+/// Hyperspace by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
 
 /* Form */
 
-	$gutter: (_size(element-margin) * 0.75);
-
 	form {
-		@include vendor('display', 'flex');
-		@include vendor('flex-wrap', 'wrap');
-		width: calc(100% + #{$gutter * 2});
-		margin: ($gutter * -1) 0 _size(element-margin) ($gutter * -1);
+		margin: 0 0 _size(element-margin) 0;
 
-		> .field {
-			@include vendor('flex-grow', '0');
-			@include vendor('flex-shrink', '0');
-			padding: $gutter 0 0 $gutter;
-			width: calc(100% - #{$gutter * 1});
+		.field {
+			margin: 0 0 (_size(element-margin) * 0.5) 0;
 
 			&.half {
-				width: calc(50% - #{$gutter * 0.5});
-			}
+				width: 50%;
+				float: left;
+				padding: 0 0 0 0.75em;
 
-			&.third {
-				width: calc(#{100% / 3} - #{$gutter * (1 / 3)});
-			}
-
-			&.quarter {
-				width: calc(25% - #{$gutter * 0.25});
+				&.first {
+					padding: 0 0.75em 0 0;
+				}
 			}
 		}
 
 		> .actions {
-			@include vendor('flex-grow', '0');
-			@include vendor('flex-shrink', '1');
-			margin: ($gutter * 1.25) 0 0 $gutter !important;
-			width: calc(100% - #{$gutter * 2});
+			margin: _size(element-margin) 0 0 0 !important;
 		}
 
-		&.alt {
-			display: block;
-			width: 100%;
-			margin: 0 0 _size(element-margin) 0;
-
-			> .actions {
-				margin: 0 0 _size(element-margin) 0;
-				width: 100%;
-			}
-		}
-
-		@include breakpoint(xsmall) {
-			$gutter: (_size(element-margin) * 0.75);
-
-			width: calc(100% + #{$gutter * 2});
-			margin: ($gutter * -1) 0 _size(element-margin) ($gutter * -1);
-
-			> .field {
-				padding: $gutter 0 0 $gutter;
-				width: calc(100% - #{$gutter * 1});
-
+		@include breakpoint(small) {
+			.field {
 				&.half {
-					width: calc(100% - #{$gutter * 1});
-				}
+					width: 100%;
+					float: none;
+					padding: 0;
 
-				&.third {
-					width: calc(100% - #{$gutter * 1});
+					&.first {
+						padding: 0;
+					}
 				}
-
-				&.quarter {
-					width: calc(100% - #{$gutter * 1});
-				}
-			}
-
-			> .actions {
-				margin: $gutter 0 0 $gutter;
-				width: calc(100% - #{$gutter * 2});
 			}
 		}
 	}
 
 	label {
-		display: block;
-		font-family: _font(family-heading);
-		font-weight: _font(weight-heading);
+		color: _palette(fg-bold);
+		font-weight: _font(weight-bold);
 		line-height: 1.5;
-		letter-spacing: 0.075em;
-		font-size: 0.8rem;
-		text-transform: uppercase;
-		margin: 0 0 (_size(element-margin) * 0.375) 0;
-
-		@include breakpoint(medium) {
-			font-size: 0.9rem;
-		}
+		margin: 0 0 (_size(element-margin) * 0.35) 0;
+		display: block;
+		font-size: 1.1em;
 	}
 
 	input[type="text"],
 	input[type="password"],
 	input[type="email"],
+	input[type="tel"],
 	select,
 	textarea {
 		@include vendor('appearance', 'none');
-		background: transparent;
+		background: _palette(border-bg);
 		border-radius: _size(border-radius);
-		border: solid 2px;
+		border: none;
+		border: solid _size(border-width) _palette(border);
 		color: inherit;
 		display: block;
 		outline: 0;
-		padding: 0 1rem;
+		padding: 0 1em;
 		text-decoration: none;
 		width: 100%;
 
 		&:invalid {
 			box-shadow: none;
+		}
+
+		&:focus {
+			border-color: _palette(fg-bold);
+			box-shadow: 0 0 0 _size(border-width) _palette(fg-bold);
 		}
 	}
 
@@ -123,6 +85,7 @@
 		position: relative;
 
 		&:before {
+			color: _palette(border);
 			content: '\f078';
 			display: block;
 			height: _size(element-height);
@@ -140,6 +103,13 @@
 		}
 	}
 
+	select {
+		option {
+			background-color: _palette(bg);
+			color: _palette(fg-bold);
+		}
+	}
+
 	input[type="text"],
 	input[type="password"],
 	input[type="email"],
@@ -148,7 +118,11 @@
 	}
 
 	textarea {
-		padding: 0.75rem 1rem;
+		padding: 0.75em 1em;
+
+		body.is-ie & {
+			min-height: 10em;
+		}
 	}
 
 	input[type="checkbox"],
@@ -156,27 +130,26 @@
 		@include vendor('appearance', 'none');
 		display: block;
 		float: left;
-		margin-right: -2rem;
+		margin-right: -2em;
 		opacity: 0;
-		width: 1rem;
+		width: 1em;
 		z-index: -1;
 
 		& + label {
 			@include icon;
+			color: _palette(fg);
 			cursor: pointer;
 			display: inline-block;
-			font-size: 1rem;
-			letter-spacing: 0;
-			font-family: _font(family);
-			text-transform: none;
+			font-size: 1em;
 			font-weight: _font(weight);
-			padding-left: (_size(element-height) * 0.6) + 1rem;
-			padding-right: 1rem;
+			padding-left: (_size(element-height) * 0.6) + 0.75em;
+			padding-right: 0.75em;
 			position: relative;
 
 			&:before {
+				background: _palette(border-bg);
 				border-radius: _size(border-radius);
-				border: solid 2px;
+				border: solid _size(border-width) _palette(border);
 				content: '';
 				display: inline-block;
 				height: (_size(element-height) * 0.6);
@@ -184,14 +157,24 @@
 				line-height: (_size(element-height) * 0.575);
 				position: absolute;
 				text-align: center;
-				top: -0.125rem;
+				top: 0;
 				width: (_size(element-height) * 0.6);
 			}
 		}
 
 		&:checked + label {
 			&:before {
+				background: _palette(fg-bold);
+				border-color: _palette(fg-bold);
+				color: _palette(accent3);
 				content: '\f00c';
+			}
+		}
+
+		&:focus + label {
+			&:before {
+				border-color: _palette(fg-bold);
+				box-shadow: 0 0 0 _size(border-width) _palette(fg-bold);
 			}
 		}
 	}
@@ -213,99 +196,26 @@
 	}
 
 	::-webkit-input-placeholder {
+		color: _palette(fg-light) !important;
 		opacity: 1.0;
 	}
 
 	:-moz-placeholder {
+		color: _palette(fg-light) !important;
 		opacity: 1.0;
 	}
 
 	::-moz-placeholder {
+		color: _palette(fg-light) !important;
 		opacity: 1.0;
 	}
 
 	:-ms-input-placeholder {
+		color: _palette(fg-light) !important;
 		opacity: 1.0;
 	}
 
 	.formerize-placeholder {
+		color: _palette(fg-light) !important;
 		opacity: 1.0;
 	}
-
-	@mixin color-form($p: null) {
-		label {
-			color: _palette($p, fg-bold);
-		}
-
-		input[type="text"],
-		input[type="password"],
-		input[type="email"],
-		select,
-		textarea {
-			border-color: _palette($p, border);
-
-			&:focus {
-				border-color: _palette($p, accent);
-			}
-		}
-
-		select {
-			option {
-				background-color: _palette($p, bg);
-				color: _palette($p, fg);
-			}
-		}
-
-		.select-wrapper {
-			&:before {
-				color: _palette($p, border);
-			}
-		}
-
-		input[type="checkbox"],
-		input[type="radio"], {
-			& + label {
-				color: _palette($p, fg);
-
-				&:before {
-					border-color: _palette($p, border);
-				}
-			}
-
-			&:checked + label {
-				&:before {
-					background-color: _palette($p, fg-bold);
-					border-color: _palette($p, fg-bold);
-					color: _palette($p, bg);
-				}
-			}
-
-			&:focus + label {
-				&:before {
-					border-color: _palette($p, accent);
-				}
-			}
-		}
-
-		::-webkit-input-placeholder {
-			color: _palette($p, fg-light) !important;
-		}
-
-		:-moz-placeholder {
-			color: _palette($p, fg-light) !important;
-		}
-
-		::-moz-placeholder {
-			color: _palette($p, fg-light) !important;
-		}
-
-		:-ms-input-placeholder {
-			color: _palette($p, fg-light) !important;
-		}
-
-		.formerize-placeholder {
-			color: _palette($p, fg-light) !important;
-		}
-	}
-
-	@include color-form;
