--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -3,10 +3,9 @@
 @import 'libs/mixins';
 @import 'libs/skel';
 @import 'font-awesome.min.css';
-@import url('https://fonts.googleapis.com/css?family=Merriweather:300,700,300italic,700italic|Source+Sans+Pro:900');
 
 /*
-	Massively by HTML5 UP
+	Hyperspace by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
@@ -23,19 +22,8 @@
 	@include skel-layout((
 		reset: 'full',
 		boxModel: 'border',
-		grid: ( gutters: 1.5rem )
+		grid: ( gutters: 1.5em )
 	));
-
-	@mixin color($p) {
-		@include color-typography($p);
-		@include color-box($p);
-		@include color-button($p);
-		@include color-form($p);
-		@include color-list($p);
-		@include color-section($p);
-		@include color-table($p);
-		@include color-pagination($p);
-	}
 
 // Base.
 
@@ -46,20 +34,21 @@
 
 	@import 'components/box';
 	@import 'components/button';
+	@import 'components/features';
 	@import 'components/form';
 	@import 'components/icon';
 	@import 'components/image';
 	@import 'components/list';
 	@import 'components/section';
+	@import 'components/split';
+	@import 'components/spotlights';
 	@import 'components/table';
-	@import 'components/pagination';
+	@import 'components/wrapper';
 
 // Layout.
 
-	@import 'layout/wrapper';
-	@import 'layout/intro';
 	@import 'layout/header';
-	@import 'layout/nav';
-	@import 'layout/main';
+	@import 'layout/wrapper';
 	@import 'layout/footer';
-	@import 'layout/navPanel';
+	@import 'layout/sidebar';
+	@import 'layout/intro';
